algoritmo v545345